# FEM-codebase

./: .gitignore  .gitmodules  DriverAMR17.py  DriverSustainabilityBenchmarkingWeek1.py  DriverSustainabilityBenchmarkingWeek2.py  DriverSustainabilityW2_modified.py  README.md  ReportWeek1.txt  ReportWeek2.txt  SPECTRAL_IMPLEMENTATION_PLAN.md  SusDriverW1.py  SusDriverW2.py  driver28b.py  driver28c.py  driver_cylinder_re5.py  inspect_results.py  main.py  ns_sol.vtu  profiler.py  pyproject.toml  requirements.txt  results_cylinder.vtk  run_solver.py  solution.vtk  solution_final.vtk  square.msh  stokes_sol.vtu  test_lid_driven_cavity.py  verify_boundary_nodes.py  visualize_cylinder_results.py
Assignments/A1/: FEM_notebook.ipynb  README.md  ex_1.py  ex_2.py  ex_5_d.py  ex_5_e.py  ex_6.py  ex_7_amr.py
Assignments/A2/: create_validation_data.py  data_validation.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.ipynb  ex_5.py  ex_6.py  ex_7.py  ex_8.py  run_all.sh  validation_data.npz  validation_data.parquet
Assignments/A3/: README.md  sem_convergence_study.py
Assignments/A3-SEM/: ex_2.py  ex_6.py  ex_7.py  ex_8.py
conf/: config.yaml
conf/mesh/: file.yaml  unit_square.yaml
conf/problem/: flow_past_cylinder.yaml  lid_driven_cavity.yaml
conf/solver/: default.yaml
data/: README.md
data/A2/: ex1_case1.npz  ex1_case2.npz  ex2_element9.npz  validation_data.parquet
meshing/: cylinder.msh  cylinder_coarse.msh  cylinder_fine.msh  cylinder_medium.msh  generate_cylinder_mesh.py  generate_mesh.py  lid_driven_cavity_32x32.msh  plot.py  plot_boundaries.py  plot_sigma.py  sigma_mesh.py  square.py  submerged_bar.py  visualize_mesh.py
src/: fem.mplstyle
src/FEM/: __init__.py  amr.py  assembly.py  boundary.py  datastructures.py  elements.py  fem.mplstyle  interpolation.py  mesh.py  navier_stokes.py  plot_style.py  solvers.py
src/FEM/SEM/: __init__.py  assembly.py  mesh.py  solvers.py  spectral.py
src/FEM_PETSc/: ns_ldc.py  stokes_ldc.py  stokes_petscfe.py  visualize_stokes.py
src/SEM/: boundary.py  datastructures.py
src/solvers/: __init__.py  base.py  datastructures.py
src/solvers/FEM/: bvp1d.py
src/solvers/spectral/: __init__.py  fsg.py  sg.py  solver.py
src/solvers/spectral/basis/: __init__.py  polynomial.py  spectral.py
src/solvers/spectral/core/: __init__.py  level.py  residuals.py  timestepping.py
src/solvers/spectral/multigrid/: __init__.py  fsg.py  hierarchy.py  transfers.py
src/solvers/spectral/operators/: __init__.py  (+2 more)
tests/: test_sem.py
