[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FEM"
version = "0.1.0"
description = "Package for Finite Element Course"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [
    { name = "Philip Korsager Nickel, Aske Schroder Nielsen", email = "s214960@dtu.dk" }
]

# All dependencies (runtime, docs, and dev)
dependencies = [
  # Runtime dependencies
  "numpy>=2.2.0,<2.4",
  "scipy>=1.14.0",
  "numba>=0.61.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "pandas>=2.2.0",
  "sympy>=1.14.0",
  "snakeviz>=2.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]



