[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FEM"
version = "0.1.0"
description = "Package for Finite Element Course"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [
    { name = "Philip Korsager Nickel, Aske Schroder Nielsen", email = "s214960@dtu.dk" }
]

# All dependencies (runtime, docs, and dev)
dependencies = [
  # Runtime dependencies
  "numpy>=2.2.0,<2.4",
  "scipy>=1.14.0",
  "numba>=0.61.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "pandas>=2.2.0",
  "sympy>=1.14.0",
  "snakeviz>=2.2.2",
  "line-profiler>=5.0.0",
  "ipykernel>=7.1.0",
  "pyarrow>=22.0.0",
  "gmsh>=4.15.0",
  "meshio>=5.3.5",
  "pyvista>=0.46.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ruff]
exclude = ["SusDriverW2.py", "driver28b.py", "driver28c.py"]



